Realm integrated successfully

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sanchit.learnzy">
+    package="com.sanchit.Upsilon">
 
     <application
         android:allowBackup="true"
@@ -10,16 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name="com.sanchit.Upsilon.ui.login.LoginActivity"
             android:label="@string/title_activity_login"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.sanchit.Upsilon.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name="com.sanchit.Upsilon.SearchActivity"></activity>
     </application>
 
 </manifest>
