--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,15 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.sanchit.Upsilon.ui.login.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
-        <activity android:name="com.sanchit.Upsilon.MainActivity">
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.sanchit.Upsilon.MainActivity"></activity>
+        <activity android:name="com.sanchit.Upsilon.ui.login.SignUpActivity"></activity>
         <activity android:name="com.sanchit.Upsilon.SearchActivity"></activity>
     </application>
 
