--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     //image loader
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
+    //circular image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
