Completed CustomUserDataStorage Added Navbar to MainActivity Configured Navbar in MainActivity Added Gesture Navbar Opening Added Support For Image Upload and storage in database . Completed InterestsAdapter and Recycler View

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     //circular image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Cloudinary api
+    implementation group: 'com.cloudinary', name: 'cloudinary-android', version: '1.30.0'
+
 }
