added courses taught XML page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:label="Upsilon">
 
         </activity>
-        <activity android:name="com.sanchit.Upsilon.MainActivity">
+        <activity android:name="com.sanchit.Upsilon.TeachActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
