Updates ViewCourseActivity.java to accomodate viewing the course and the CoursesTaughtActivity.java

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     //Cloudinary api
     implementation group: 'com.cloudinary', name: 'cloudinary-android', version: '1.30.0'
 
+    //Convert Json To Java Object
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 }
