--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     //Convert Json To Java Object
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    //Facebook SDK
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
 }
