Updated View Course Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,14 @@
             android:name="com.sanchit.Upsilon.ui.login.LoginActivity"
             android:label="Upsilon">
         </activity>
-        <activity android:name=".TeachActivity">
+        <activity android:name=".TeachActivity"></activity>
+        <activity android:name="com.sanchit.Upsilon.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.sanchit.Upsilon.MainActivity"></activity>
         <activity android:name="com.sanchit.Upsilon.ui.login.SignUpActivity"></activity>
         <activity android:name="com.sanchit.Upsilon.SearchActivity"></activity>
         <activity android:name=".UserDataSetupActivity1"></activity>
