--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,8 @@ dependencies {
     //Facebook SDK
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
 }
