--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".AddCourseActivityContinued"></activity>
         <activity android:name=".ViewCourseActivity"></activity>
         <activity android:name=".CoursesTaughtActivity"></activity>
+        <activity android:name=".RegisterCourseActivity"></activity>
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
 
