--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".ProfileViewActivity"></activity>
         <activity android:name=".TeacherViewCourseActivity"></activity>
         <activity android:name=".RegisteredStudentViewCourse"></activity>
+        <activity android:name=".ExploreActivity"></activity>
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
         <activity android:name="com.facebook.FacebookActivity"
