--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".TeacherViewCourseActivity"></activity>
         <activity android:name=".RegisteredStudentViewCourse"></activity>
         <activity android:name=".ExploreActivity"></activity>
+        <activity android:name=".Terms"></activity>
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
         <activity android:name="com.facebook.FacebookActivity"
