--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    configurations {
+        compile.exclude group: "junit", module: "junit"
+    }
 
     buildTypes {
         release {
@@ -45,7 +48,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.4.0'
-    testImplementation 'junit:junit:4.12'
+    //testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
@@ -89,5 +92,9 @@ dependencies {
 
     //RazorPay
     implementation 'com.razorpay:checkout:1.5.16'
+
+    //JsonParser
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 
 }
