--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'com.android.support:design:29.0.3'
 
     //material components
-    implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0-rc01'
 
     //card view
     implementation 'com.android.support:cardview-v7:29.0.3'
@@ -95,7 +95,6 @@ dependencies {
 
     //JsonParser
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    compileOnly 'com.google.android.wearable:wearable:2.6.0'
 
 
 }
