--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
         </activity>
         <activity android:name=".TestActivity"></activity>
+        <activity android:name=".TestCreateActivity"></activity>
         <activity
             android:name=".AssignmentActivity"
             android:label="@string/title_activity_assignment"
