--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     //ExoPlayer
-    implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.14.1'
 
     //RazorPay
     implementation 'com.razorpay:checkout:1.5.16'
@@ -102,5 +102,7 @@ dependencies {
     //JsonParser
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
+    //pdf view
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
 }
