--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
         <activity android:name=".TestCreateActivity" />
         <activity
             android:name=".AssignmentActivity"
-            android:label="@string/title_activity_assignment"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_assignment"/>
         <activity android:name=".AssignmentsActivity" />
         <activity android:name=".PaymentLogActivity" />
         <activity android:name=".GetStartedAsTeacherActivity" />
