--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,6 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
-
-
     <application
         android:name=".Upsilon"
         android:allowBackup="true"
@@ -25,9 +23,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-
         android:usesCleartextTraffic="true">
-        <activity android:name=".AssignmentTeacherActivity"></activity>
+        <activity android:name=".PDFViewActivity"></activity>
+        <activity android:name=".AssignmentTeacherActivity" />
         <activity android:name=".AssignmentsTeacherActivity" />
         <activity android:name=".ClassActivityTeacher" />
         <activity android:name=".ClassActivity" />
